Done with Assignment

--- a/www.html
+++ b/www.html
@@ -4,20 +4,55 @@
             <title>
                 World Wide Web
             </title>
+            <style>
+                body {
+                    margin: 5% 10% 5% 10%;
+                    }
+                  
+                img {
+                    width: 70%;
+                    height: auto;
+                    }
+            </style>
         </head>
         <body>
             <h1>HTML</h1>
             <p>
-                Hypertext Markup Language  is a standard markup language for creating webpages and applications.
-                <a href="https://www.techtarget.com/whatis/definition/Web-server">Web server</a> 
-                receive HTML documents from a web server or from local storage and render the documents into multimedia web pages.
-                HTML describes the structure of a web page semantically and originally included cues for the appearance of the document.
-                <a href="https://www.computerhope.com/jargon/m/markup-language.htm">Markup Language</a> 
-                describes the structure of the content in a document, providing a way to add meaning to text.
-                <a href="https://www.mozilla.org/en-US/firefox/browsers/what-is-a-browser/">Web browsers</a>
-                render HTML documents, as well as other resources such as images and scripts, to create the final webpage displayed to the user.
+                HTML, or Hypertext Markup Language, is a language used to create web pages and web applications. It was first created by Tim Berners-Lee in 1991 as a way to share scientific information with colleagues. HTML has since undergone many revisions and updates, with the latest version being HTML5.
             </p>
-            <img src=""https://thumbs.dreamstime.com/z/smart-city-internet-things-wireless-communication-network-abstract-image-visual-93315266.jpg" alt="Smart City IOT">
+            <table>
+                <tr>
+                  <th><h2>Components</h2></th>
+                  <th><h2>Definition</h2></th>
+                </tr>
+                <tr>
+                  <td><u><h3><a href="https://www.w3schools.com/TAGS/default.asp">Tags</a></h3></u></td>
+                  <td>HTML uses tags to identify different parts of a web page. Tags are written in angle brackets (< >) and come in pairs, with the opening tag and closing tag surrounding the content.</td>
+                </tr>
+                <tr>
+                  <td colspan="2"></td>
+                </tr>
+                <tr>
+                  <td><u><h3><a href="https://developer.mozilla.org/en-US/docs/Web/HTML/Attributes">Attributes</a></h3></u></td>
+                  <td>HTML tags can also have attributes that provide additional information about the tag. Attributes are written inside the opening tag and typically take the form of name-value pairs.</td>
+                </tr>
+                <tr>
+                  <td colspan="2"></td>
+                </tr>
+                <tr>
+                  <td><u><h3><a href="https://en.wikipedia.org/wiki/HTML_element">Elements</a></h3></u></td>
+                  <td>HTML elements are made up of a combination of tags, attributes, and content. They define the structure and content of a web page.</td>
+                </tr>
+                <tr>
+                  <td colspan="2"></td>
+                </tr>
+                <tr>
+                  <td><u><h3><a href="https://www.freeformatter.com/html-entities.html">Entities</a></h3></u></td>
+                  <td>HTML entities are special characters that have a specific meaning in HTML, such as the ampersand (&amp;) and the less-than symbol (&lt;). They are used to display special characters that would otherwise be interpreted as HTML code.</td>
+                </tr>
+              </table>
+              
+            <img src="www.jpg" alt="Smart City IOT">
 
         </body>
 
